# libfcs-python

./: .gitignore  .gitmodules  MANIFEST.in  README.md  pyproject.toml  setup.py  test.py
.github/workflows/: build_wheels.yml  debug_wheels.yml  test_lint.yml
src/libfcs/: .gitignore  events.py  gates.py
src/libfcs_ext/: hyperlog.c  hyperlog.h  libfcs.c  logicle.c  logicle.h
src/libfcs_ext/linux_ghc_build/: build.mk
src/libfcs_ext/linux_ghc_build/patches/: fpic-default.patch  series
tests/: test_gating_funcs.py  test_gating_ufuncs.py  test_ufuncs.py
