[build-system]
requires = [
    "setuptools>=45", "setuptools_scm[toml]>=6.2",
    "oldest-supported-numpy;python_version>'3.7'", "numpy==1.16;python_version<='3.7'"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# Run the package tests using `pytest`
test-command = "pytest {package}/tests"
test-requires = "pytest"
# Skip 32-bit builds (no Haskell support)
skip = ["*-win32", "*-manylinux_i686"]

[tool.cibuildwheel.windows]
# Use delvewheel on windows
#before-build = "pip install delvewheel"
#repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"
